Bug 396448 - KTeaTime context menu broken after adding custom tea
Summary: KTeaTime context menu broken after adding custom tea
Status: RESOLVED FIXED
Alias: None
Product: kteatime
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Stefan Böhmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-12 18:35 UTC by Unknown
Modified: 2018-07-19 21:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Broken menu (13.81 KB, image/png)
2018-07-12 18:35 UTC, Unknown
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2018-07-12 18:35:59 UTC
Created attachment 113901 [details]
Broken menu

Steps to reproduce:

1. Open KTeaTime
2. Right click on taskbar icon -> configure
3. Add a new tea
4. After clicking ok, the context menu is broken
Comment 1 Laurent Montel 2018-07-18 05:27:09 UTC
I can't reproduce this bug...
Comment 2 Albert Astals Cid 2018-07-19 21:46:39 UTC
Git commit 7a65e98351e42c6b9f9c7bba3b62ca30d4b38818 by Albert Astals Cid, on behalf of Fabio Bolz.
Committed on 19/07/2018 at 21:46.
Pushed by aacid into branch 'Applications/18.08'.

Fix broken context menu after adding custom tea

Reviewers: #kde_applications, aacid

Reviewed By: #kde_applications, aacid

Subscribers: aacid, kde-utils-devel

Differential Revision: https://phabricator.kde.org/D14082

M  +2    -1    src/toplevel.cpp

https://commits.kde.org/kteatime/7a65e98351e42c6b9f9c7bba3b62ca30d4b38818