Fix broken context menu after adding custom tea

BUG: 396448

Reviewers: #kde_applications, aacid

Reviewed By: #kde_applications, aacid

Subscribers: aacid, kde-utils-devel

Differential Revision: https://phabricator.kde.org/D14082